# langevitour

./: .Rbuildignore  .gitignore  .npmignore  DESCRIPTION  LICENSE  LICENSE.md  Makefile  NAMESPACE  NEWS.md  README.md  _pkgdown.yml  example.html  langevitour.js  package-lock.json  package.json  pyproject.toml  tsconfig.json  webpack.config.js
R/: data.R  denoise.R  langevitour.R
data/: zeiselPC.rda
inst/: CITATION
inst/htmlwidgets/: langevitour.js  langevitour.yaml
inst/htmlwidgets/lib/: langevitour-code.js  langevitour-pack.js  langevitour-pack.js.map  langevitour.js
lib/: guides.js  guides.js.map  langevitour.js  langevitour.js.map  math.js  math.js.map  util.js  util.js.map
man/: knnDenoise.Rd  langevitour-shiny.Rd  langevitour.Rd  zeiselPC.Rd
py/: README.md
py/examples/: langevitour.ipynb  tour.py
py/langevitour/: __about__.py  __init__.py  langevitour.py  utils.py
py/langevitour/static/: langevitour-pack.js
py/tests/: test_langevitour.py
src/: guides.ts  langevitour.js  langevitour.ts  math.ts  util.ts
vignettes/: crosstalk.Rmd  examples.Rmd  rnaseq.Rmd  usage.Rmd
