[build-system]
requires = ["hatchling>=1.26.1"]
build-backend = "hatchling.build"

[project]
name = "langevitour"
dynamic = ["version"]
description = 'Python interface to langevintour'
readme = "py/README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Wytamma Wirth", email = "wytamma.wirth@me.com" },
  { name = "Paul Harrison", email = "paul.harrison@monash.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy",
]

[project.urls]
Documentation = "https://github.com/pfh/langevitour#readme"
Issues = "https://github.com/pfh/langevitour/issues"
Source = "https://github.com/pfh/langevitour"

[tool.hatch.version]
path = "py/langevitour/__about__.py"
validate-bump = false

[tool.hatch.build]
include = [
  "py/langevitour/*",
]

[tool.hatch.build.targets.wheel]
packages = ["py/langevitour"]


[tool.hatch.envs.default]
python = "python3"
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "jupyter",
  "pandas",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:py/tests}"
test-cov = "coverage run -m pytest {args:py/tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:py/langevitour tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["langevitour"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"py/tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["langevitour", "tests"]
branch = true
parallel = true
omit = [
  "py/langevitour/__about__.py",
]

[tool.coverage.paths]
langevitour = ["py/langevitour", "*/langevitour/py/langevitour"]
tests = ["py/tests", "*/langevitour/py/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
